Implementacion de reporte. Post-data : "tire produccion"

--- a/Granja/mi_app/templates/mi_app/base.html
+++ b/Granja/mi_app/templates/mi_app/base.html
@@ -49,9 +49,9 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="/report" class="sidebar-link">
                         <img src="{% static 'icons/estadistica.png' %}" alt="Icono" width="20" height="20">
-                        <span>Mi espacio</span>
+                        <span>Reporte</span>
                     </a>
                 </li>
             </ul>
