--- a/Granja/mi_app/templates/mi_app/porcinos.html
+++ b/Granja/mi_app/templates/mi_app/porcinos.html
@@ -99,7 +99,7 @@
                     <td>
 
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#infoModal"
-                            onclick="loadClienteInfo('{{ cliente.cedula }}')">
+                            onclick="loadPorcinoInfo('{{ porcino.idporcinos }}')">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-search" viewBox="0 0 16 16">
                                 <path
@@ -203,18 +203,13 @@
             </div>
             <div class="modal-body">
                 <!-- Aquí se llenarán los datos del cliente de manera dinámica -->
-                <p><strong>Cédula:</strong> <span id="modal-cedula"></span></p>
-                <p><strong>Nombre:</strong> <span id="modal-nombre"></span></p>
-                <p><strong>Apellidos:</strong> <span id="modal-apellidos"></span></p>
-                <p><strong>Dirección:</strong> <span id="modal-direccion"></span></p>
-                <p><strong>Teléfono:</strong> <span id="modal-telefono"></span></p>
+                <p><strong>Id:</strong> <span id="modal-idporcino"></span></p>
+                <p><strong>Edad:</strong> <span id="modal-edad"></span></p>
+                <p><strong>Peso:</strong> <span id="modal-peso"></span></p>
+                <p><strong>Raza:</strong> <span id="modal-raza"></span></p>
+                <p><strong>Alimentación:</strong> <span id="modal-alimentacion"></span></p>
+                <p><strong>Id propietario:</strong> <span id="modal-idpropietario"></span></p>
                 <hr>
-
-                <!-- Lista de cerdos asociados al cliente -->
-                <h5>Cerdos Asociados</h5>
-                <ul id="cerdos-list" class="list-group">
-                    <!-- Aquí se llenará la lista de cerdos -->
-                </ul>
             </div>
         </div>
     </div>
