--- a/Granja/mi_app/templates/mi_app/base.html
+++ b/Granja/mi_app/templates/mi_app/base.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="{% url 'alimentacion' %}" class="sidebar-link">
                         <img src="{% static 'icons/zanahoria.png' %}" alt="Icono" width="20" height="20">
                         <span>Alimentación</span>
                     </a>
