Implementacion agregar alimento

--- a/Granja/mi_app/templates/mi_app/index.html
+++ b/Granja/mi_app/templates/mi_app/index.html
@@ -346,15 +346,15 @@
             </div>
         </div>
     </div>
+</div>
 
 
 
 
-
-    {% block extra_js %}
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="{% static 'js/index.js' %}"></script>{% endblock %}
-
+{% block extra_js %}
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="{% static 'js/index.js' %}"></script>{% endblock %}
 
 
-    {% endblock %}
+
+{% endblock %}
