--- a/Granja/mi_app/templates/mi_app/alimentacion.html
+++ b/Granja/mi_app/templates/mi_app/alimentacion.html
@@ -17,6 +17,10 @@
                 <h1 class="display-3">Alimentación</h1>
                 <p class="">En este apartado encontraras la información importante sobre los planes o elementos
                     requeridos para la alimentación de los porcinos registrados en la granja</p>
+                <button type="button" class="btn btn-success py-4 my-4" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Registrar alimento y dosis
+                </button>
             </div>
 
             <!-- Información sobre botones disponibles para clientes registrados -->
@@ -79,6 +83,7 @@
                 <tr>
                     <th class="table-header-custom" scope="col">Id </th>
                     <th class="table-header-custom" scope="col">Descripción</th>
+                    <th class="table-header-custom" scope="col">Dosis</th>
                     <th class="table-header-custom" scope="col">Acciones</th>
                 </tr>
                 {% for alimentacion in alimentaciones %}
@@ -88,6 +93,7 @@
                 <tr>
                     <td>{{alimentacion.idalimentacion}}</td>
                     <td>{{alimentacion.descripcion}}</td>
+                    <td>{{alimentacion.dosis}} KG</td>
                     <td>
 
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#infoModal"
@@ -140,69 +146,40 @@
 
 <!-- Modal modificar información del cliente -->
 <!-- Modal para editar la información del cliente -->
-<div class="modal fade" id="editarPorcinoModal" tabindex="-1" aria-labelledby="editarPorcinoLabel" aria-hidden="true">
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="editarPorcinoLabel">Editar Información del porcino</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Agregar cliente</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <!-- Formulario para actualizar el cliente -->
-                <form id="formEditarPorcino" method="POST" action="#">
-                    {% csrf_token %}
-                    <!-- Campo para Cédula (no editable) -->
-                    <div class="mb-3">
-                        <label for="modal-idporcino-mod" class="form-label">Id porcino:</label>
-                        <input id="modal-idporcino-mod" type="text" class="form-control" name="modal-idporcino-mod"
-                            readonly>
-                    </div>
-                    <!-- Campo para Nombre -->
-                    <div class="mb-3">
-                        <label for="modal-edad-mod" class="form-label">Edad:</label>
-                        <input id="modal-edad-mod" type="text" class="form-control" name="edad" required>
-                    </div>
-                    <!-- Campo para Apellidos -->
-                    <div class="mb-3">
-                        <label for="modal-peso-mod" class="form-label">Peso:</label>
-                        <input id="modal-peso-mod" type="text" class="form-control" name="peso" required>
-                    </div>
-                    <!-- Campo para Teléfono -->
-                    <div class="mb-3">
-                        <label for="modal-idpropietario-mod" class="form-label">Id propietario:</label>
-                        <input id="modal-idpropietario-mod" type="text" class="form-control"
-                            name="modal-idpropietario-mod" readonly>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-                </form>
+                <div>
+                    <form action="agregarAlimentacion" method="POST">
+                        {% csrf_token %}
+
+                        <input type="hidden" id="idalimentacion" name="idalimentacion">
+
+                        <div class="mb-3">
+                            <label for="descripcion" class="form-label">Descripción:</label>
+                            <input id="descripcion" type="text" class="form-control" name="descripcion" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="dosis" class="form-label">Dosis:</label>
+                            <input id="number" type="text" class="form-control" name="dosis" required>
+                        </div>
+
+                        <input type="submit" class="btn btn-success" value="Agregar alimento">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-
-
-<!-- Modal mostrar información detallada -->
-<div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="infoModalLabel">Información del porcino</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <!-- Aquí se llenarán los datos del cliente de manera dinámica -->
-                <p><strong>Id:</strong> <span id="modal-idporcino"></span></p>
-                <p><strong>Edad:</strong> <span id="modal-edad"></span></p>
-                <p><strong>Peso:</strong> <span id="modal-peso"></span></p>
-                <p><strong>Raza:</strong> <span id="modal-raza"></span></p>
-                <p><strong>Alimentación:</strong> <span id="modal-alimentacion"></span></p>
-                <p><strong>Id propietario:</strong> <span id="modal-idpropietario"></span></p>
-                <hr>
-            </div>
-        </div>
-    </div>
-</div>
 
 <!-- Modal de confirmación de eliminación -->
 <div class="modal fade" id="eliminarPorcinoModal" tabindex="-1" aria-labelledby="eliminaPorcinoLabel"
