--- a/Granja/mi_app/templates/mi_app/alimentacion.html
+++ b/Granja/mi_app/templates/mi_app/alimentacion.html
@@ -27,14 +27,6 @@
             <div class="col d-grid gap-3">
                 <div>
                     <p>Las acciones disponibles para los clientes registrados son: </p>
-                    <button type="button" class="btn btn-primary">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-search" viewBox="0 0 16 16">
-                            <path
-                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-                        </svg>
-                    </button>
-                    <span>Ver información completa</span>
                 </div>
 
                 <div>
@@ -47,7 +39,7 @@
                                 d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
                         </svg>
                     </button>
-                    <span>Eliminar porcino</span>
+                    <span>Eliminar Alimento</span>
                 </div>
 
                 <div>
@@ -58,20 +50,8 @@
                                 d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325" />
                         </svg>
                     </button>
-                    <span>Actualizar información del porcino </span>
+                    <span>Actualizar información del alimento </span>
                 </div>
-
-                <div>
-                    <button type="button" class="btn btn-secondary">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-plus" viewBox="0 0 16 16">
-                            <path
-                                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
-                        </svg>
-                    </button>
-                    <span>Agregar porcino</span>
-                </div>
-
             </div>
         </div>
     </div>
@@ -96,18 +76,9 @@
                     <td>{{alimentacion.dosis}} KG</td>
                     <td>
 
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#infoModal"
-                            onclick="loadPorcinoInfo('{{ porcino.idporcinos }}')">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-search" viewBox="0 0 16 16">
-                                <path
-                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-                            </svg>
-                        </button>
-
                         <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                            data-bs-target="#eliminarPorcinoModal"
-                            onclick="setEliminarPorcino('{{ porcino.idporcinos }}')">
+                            data-bs-target="#eliminarAlimentoModal"
+                            onclick="setEliminarAlimento('{{ alimentacion.idalimentacion }}')">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-trash" viewBox="0 0 16 16">
                                 <path
@@ -118,19 +89,11 @@
                         </button>
 
                         <button type="button" class="btn btn-warning" data-bs-toggle="modal"
-                            onclick="setEditarPorcino('{{ porcino.idporcinos }}')">
+                            onclick="setEditarAlimento('{{ alimentacion.idalimentacion }}')">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-pencil" viewBox="0 0 16 16">
                                 <path
                                     d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325" />
-                            </svg>
-                        </button>
-
-                        <button type="button" class="btn btn-secondary">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-plus" viewBox="0 0 16 16">
-                                <path
-                                    d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
                             </svg>
                         </button>
                     </td>
@@ -182,16 +145,16 @@
 
 
 <!-- Modal de confirmación de eliminación -->
-<div class="modal fade" id="eliminarPorcinoModal" tabindex="-1" aria-labelledby="eliminaPorcinoLabel"
+<div class="modal fade" id="eliminarAlimentoModal" tabindex="-1" aria-labelledby="eliminarAlimentoLabel"
     aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="eliminaPorcinoLabel">Eliminar porcino</h5>
+                <h5 class="modal-title" id="eliminarAlimentoLabel">Eliminar alimento</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                ¿Estás seguro de que quieres eliminar este porcino? Esta acción no se puede deshacer.
+                ¿Estás seguro de que quieres eliminar este alimento? Esta acción no se puede deshacer.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
@@ -202,9 +165,36 @@
     </div>
 </div>
 
+
+<!-- Modal editar dosis -->
+
+<div class="modal fade" id="editarDosisModal" tabindex="-1" aria-labelledby="editarDosisLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editarPorcinoLabel">Editar Información del porcino</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!-- Formulario para actualizar el cliente -->
+                <form id="formEditarDosis" method="POST" action="#">
+                    {% csrf_token %}
+                    <!-- Campo para Cédula (no editable) -->
+                    <div class="mb-3">
+                        <label for="modal-dosis-mod" class="form-label">Dosis:</label>
+                        <input id="modal-dosis-mod" type="text" class="form-control" name="dosis">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 {% block extra_js %}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="{% static 'js/porcinos.js' %}"></script>{% endblock %}
+<script src="{% static 'js/alimentos.js' %}"></script>{% endblock %}
 
 
 
